<resources>
    <string name="app_name">NetParse</string>

    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>

    <string name="hello_world">Hello world!</string>

    <string-array
        name="camera_choices">
        <item>Take Picture</item>
        <item>Record Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="menu_logout_label">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">log in</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">E-mail</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="signup_error_message">Please make sure you enter username, password, and e-mail address</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter username and password</string>
    <string name="login_error_title">Oops! Wrong input!</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="action_settings">Settings</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="menu_edit_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">Sorry! There was an error</string>
    <string name="video_file_size_warning">The selected video must be less than 10 megabytes.</string>
    <string name="error_opening_file">There was a problem with the selected file</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the file selected. Please selec another file</string>
    <string name="error_selectiong_file_title">We\'re sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="error_sending_message_title">Oops!</string>
    <string name="title_activity_view_image">NetParse</string>
    <string name="content_desc_background">NetParse Background Image</string>
    <string name="subtitle">network</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="android_desc_button_divider">Button divider</string>
    <string name="push_message">You have a new NetParse message from %s!</string>
</resources>
