<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center" android:background="@mipmap/background_texture">

    <RelativeLayout
        style="@style/AuthBackgroundImage"
        android:layout_marginTop="80dp"
        android:paddingBottom="30dp"
        tools:context="org.kscience.networkWithParse.ui.SignUpActivity">

        <include layout="@layout/auth_common"/>

        <LinearLayout
            android:id="@+id/editTextLayout"
            style="@style/AuthFieldContainer">

            <EditText
                android:id="@+id/usernameField"
                style="@style/AuthEditText"
                android:hint="@string/username_hint">
                <requestFocus/>
            </EditText>

            <EditText
                android:id="@+id/passwordField"
                style="@style/AuthEditText"
                android:hint="@string/password_hint"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/emailField"
                style="@style/AuthEditText"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/buttonDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextLayout"
            android:layout_centerHorizontal="true"
            android:background="@color/apptheme_color"
            android:contentDescription="@string/android_desc_button_divider"/>

        <Button
            android:id="@+id/signupButton"
            style="@style/AuthButton"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editTextLayout"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="0dp"
            android:layout_toLeftOf="@id/buttonDivider"
            android:text="@string/sign_up_button_label"/>

        <Button
            android:id="@+id/cancelButton"
            style="@style/AuthButton"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editTextLayout"
            android:layout_marginLeft="0dp"
            android:layout_toRightOf="@id/buttonDivider"
            android:text="@string/cancel_button_label"/>
    </RelativeLayout>
</LinearLayout>